# takenoko

./: .eslintrc.js  .gitignore  Anchor.toml  BUILD_STATUS.md  DEBUG_BLANK_SCREEN.md  DEMO_MODE.md  DEPLOYMENT.md  INSTALLATION_COMPLETE.txt  LOAD_EXTENSION.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TAKENOKO_UPDATE.md
demo/: alice-dinner.html
extension/: webpack.config.js
extension/assets/: README.md
extension/background/: service-worker.ts
extension/content/: content.ts  inject.ts
extension/lib/jupiter/: lend.ts
extension/lib/round-up/: monitor.ts
extension/lib/wallet/: keypair.ts  storage.ts  transaction.ts
extension/popup/: App.tsx  debug.html  index.html  index.tsx
extension/popup/components/: Dashboard.tsx  SetupWallet.tsx  UnlockWallet.tsx
programs/round-up-vault/: Cargo.toml
programs/round-up-vault/src/: lib.rs
tests/: round-up-vault.ts
