[package]
name = "round-up-vault"
version = "0.1.0"
description = "Round-up investing vault program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "round_up_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
